kubernetes/main/.archive/vintagestory/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vintagestory
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vintagestory

  egress:
    - toFQDNs:
        - matchPattern: '*.vintagestory.at'
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
